openshift/zal-ocp.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-monitoring
spec:
  podSelector:
    matchLabels:
      name: zal
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: monitoring
  policyTypes:
  - Ingress

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/part-of: zabbix
    k8s-app: zal
  name: zal
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: zal
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8s-app: zal
        name: zal
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: k8s-app
                  operator: In
                  values:
                  - zal
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - args:
        - send
        - --log.level=debug
        - --zabbix-addr=zabbix-server:10051
        - --default-host=openshift
        - --hosts-path=/etc/zal/sender-config.yml
        #image: quay.io/devopyio/zabbix-alertmanager:v1.2.4
        image: docker.io/jontow/zabbix-alertmanager:latest
        imagePullPolicy: Always
        name: zal
        ports:
        - containerPort: 9095
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/zal
          name: config-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: zal
        name: config-volume
